...
            "value": "Titel"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Title"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Título"
...
            "value": "Niemand"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Nobody"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nadie"
...
            "value": "Einkaufen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shopping"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Compras"
...
            "value": "Hinzufügen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir"
...
            "value": "Sichern"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
...
            "value": "Erledigte weg"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Clear done"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Quitar los hechos"
...
            "value": "Aufgaben"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Tasks"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Tareas"
...
            "value": "Datum setzen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Set a date"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Poner una fecha"
...
            "value": "Geld eintragen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add money"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir dinero"
...
            "value": "Schritt hinzufügen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add a step"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir un paso"
...
            "value": "Zielbetrag"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Target amount"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cantidad objetivo"
...
            "value": "Betrag"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Amount"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cantidad"
...
            "value": "Unterlagen zusammensuchen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Collect the documents"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Reunir los papeles"
...
            "value": "Was zu tun ist"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "What to do"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Qué hay que hacer"
...
            "value": "Neue Aufgabe"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New task"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nueva tarea"
...
